test blurred header fixxxxx

--- a/src/features/AppHeader/AppHeader.module.css
+++ b/src/features/AppHeader/AppHeader.module.css
@@ -18,6 +18,7 @@
     rgb(255, 255, 255, 0.8) 66%,
     rgba(255, 255, 255, 0) 100%
   );
+  padding-top: var(--tg-top);
 }
 .placeholder {
   height: var(--tg-top);
